git-annex (5.20150508.2) UNRELEASED; urgency=medium

  * import: Refuse to import files that are within the work tree, as that
    does not make sense and could cause data loss.

 -- Joey Hess <id@joeyh.name>  Mon, 11 May 2015 12:45:06 -0400

git-annex (5.20150508.1) unstable; urgency=medium

  * Now builds cleanly using ghc 7.10 (as well as ghc back to 7.6).
  * Imrovements to the git-annex-standalone.deb build process.
    (Thanks, Yaroslav Halchenko)

 -- Joey Hess <id@joeyh.name>  Mon, 11 May 2015 12:08:58 -0400

git-annex (5.20150508) unstable; urgency=medium

  * Improve behavior when a git-annex command is told to operate
    on a file that doesn't exist. It will now continue to other
    files specified after that on the command line, and only error out at
    the end.
  * S3: Enable debug logging when annex.debug or --debug is set.
  * S3: git annex info will show additional information about a S3 remote
    (endpoint, port, storage class)
  * S3: Let git annex enableremote be used, without trying to recreate
    a bucket that should already exist.
  * S3: Fix incompatability with bucket names used by hS3; the aws library
    cannot handle upper-case bucket names. git-annex now converts them to
    lower case automatically.
  * import: Check for gitignored files before moving them into the tree.
    (Needs git 1.8.4 or newer.)
  * import: Don't stop entire import when one file fails due to being
    gitignored or conflicting with something in the work tree.
  * import: Before removing a duplicate file in --deduplicate or
    --clean-duplicates mode, verify that enough copies of its content still
    exist.
  * Improve integration with KDE's file manager to work with dolphin
    version 14.12.3 while still being compatable with 4.14.2.
    Thanks, silvio.
  * assistant: Added --autostop to complement --autostart.
  * Work around wget bug #784348 which could cause it to clobber git-annex
    symlinks when downloading from ftp.