@@ -2,6 +2,7 @@ git-annex (5.20150508.2) UNRELEASED; urgency=medium
 
   * import: Refuse to import files that are within the work tree, as that
     does not make sense and could cause data loss.
+  * drop: Now supports --all, --unused, and --key.
 
  -- Joey Hess <id@joeyh.name>  Mon, 11 May 2015 12:45:06 -0400
 
